create orderDetails.html and show.html for displaying all orders with a functionality to delete an order